# ii-agent

./: .dockerignore  .env.example  .gitignore  README.md  cli.py  docker-compose.yaml  pyproject.toml  run_benchmark.py  run_gaia.py  start.sh  start_docker.sh  stop.sh  utils.py  ws_server.py
docker/: docker-compose.yaml  start.sh
docker/backend/: Dockerfile  run.sh
docker/frontend/: Dockerfile
docker/nginx/: Dockerfile  docker-entrypoint.sh  nginx.conf.template
docker/sandbox/: Dockerfile
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  mock.ts  page.tsx
frontend/components/: action.tsx  browser.tsx  code-editor.tsx  home.tsx  question-input.tsx  search-browser.tsx  terminal.tsx
frontend/providers/: index.tsx
frontend/typings/: agent.ts
frontend/utils/: file-utils.tsx
proxy_server/: Dockerfile  main.py
src/ii_agent/agents/: anthropic_fc.py
src/ii_agent/browser/: browser.py  detector.py  utils.py
src/ii_agent/core/: event.py
src/ii_agent/db/: manager.py
src/ii_agent/llm/: __init__.py  anthropic.py  base.py  gemini.py  message_history.py  openrouter.py  token_counter.py  utils.py
src/ii_agent/prompts/: gaia_system_prompt.py  system_prompt.py
src/ii_agent/sandbox/: config.py  docker_sandbox.py
src/ii_agent/tools/: __init__.py  audio_understanding.py  base.py  bash_tool.py  browser_tool.py  complete_tool.py  file_write_tool.py  list_html_links_tool.py  markdown_converter.py  presentation_tool.py  register_deployment.py  sequential_thinking_tool.py  static_deploy_tool.py  str_replace_tool.py  tavily_visit_webpage.py  tavily_web_search.py  test_bash_tool.py  test_sequential_thinking_tool.py  test_str_replace_tool.py  test_visit_webpage.py  test_web_search.py  text_inspector_tool.py  tool_manager.py  utils.py  visit_webpage.py  visit_webpage_client.py  visit_webpage_tool.py  visualizer.py  web_search.py  web_search_client.py  web_search_tool.py  youtube_tool.py
src/ii_agent/utils/: constants.py  prompt_generator.py  workspace_manager.py
tests/llm/context_manager/: test_file_based.py
(+20 files in other folders)
